--- a/ui/controls/inspector-option.reel/_inspector-option.css
+++ b/ui/controls/inspector-option.reel/_inspector-option.css
@@ -1,10 +1,5 @@
 .InspectorOption {
     outline: none;
-
-    @nest .Inspector-body & {
-        margin-left: -1em;
-        margin-right: -1em;
-    }
 }
 
 .InspectorOption > * {
